docs/apache-airflow-providers-amazon/3.3.0/_sources/_api/airflow/providers/amazon/aws/hooks/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.hooks`
============================================

.. py:module:: airflow.providers.amazon.aws.hooks


Submodules
----------
.. toctree::
   :titlesonly:
   :maxdepth: 1

   athena/index.rst
   aws_dynamodb/index.rst
   base_aws/index.rst
   batch_client/index.rst
   batch_waiters/index.rst
   cloud_formation/index.rst
   datasync/index.rst
   dms/index.rst
   dynamodb/index.rst
   ec2/index.rst
   eks/index.rst
   elasticache_replication_group/index.rst
   emr/index.rst
   emr_containers/index.rst
   glacier/index.rst
   glue/index.rst
   glue_catalog/index.rst
   glue_crawler/index.rst
   kinesis/index.rst
   lambda_function/index.rst
   logs/index.rst
   rds/index.rst
   redshift/index.rst
   redshift_cluster/index.rst
   redshift_data/index.rst
   redshift_sql/index.rst
   s3/index.rst
   sagemaker/index.rst
   secrets_manager/index.rst
   ses/index.rst
   sns/index.rst
   sqs/index.rst
   step_function/index.rst


